fixed overhanging imageTag which breaks site on smaller mobile screens like iPhone 5s etc

--- a/assets/css/3-modules/_about.sass
+++ b/assets/css/3-modules/_about.sass
@@ -1,8 +1,8 @@
 .aboutBack
   display: flex
+  background-image: url('/assets/img/sunset_compressed.jpg')
   background-position: center center
   background-repeat: no-repeat
-  background-image: url('/assets/img/sunset_compressed.jpg')
   -webkit-background-size: cover
   -moz-background-size: cover
   -o-background-size: cover
@@ -44,6 +44,9 @@
   background-position: center 20%
   background-size: cover
   border: 10px white solid
+  @media screen and (max-width: 411px)
+    width: 200px
+    height: 200px
 
 
 .aboutBox
